--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body, html {
 /* grid layout for entire page */
 .grid {
   display: grid;
-  grid-template-columns: 425px auto 425px;
+  grid-template-columns: 350px auto 350px;
   grid-template-rows: 80px auto auto auto;
   grid-gap: 1em;
 }
@@ -18,19 +18,22 @@ header {
   height: 80px;
 }
 
-.sidebar-left {
-  grid-row: 2;
-  grid-column: 1/2;
-}
-
 article {
   grid-row: 2;
-  grid-column: 2/3;
+  grid-column: 1/3;
+  position: absolute;
+  left: 25px;
+  top: 100px;
 }
-
 .sidebar-right {
   grid-row: 2;
   grid-column: 3/4;
+  /*background-image: url("./img/carb.png");*/
+  border-radius: 3px;
+  position: absolute;
+  left: 1150px;
+  margin-left: 10px;
+  top: 80px;
 }
 
 footer {
@@ -44,6 +47,8 @@ footer {
 below {
   grid-row: 4;
   grid-column: 1/4;
+  position:relative;
+  top: 600px;
 }
 
 /* grid layout navbar */
@@ -71,14 +76,20 @@ below {
   grid-column: 1/2;
 }
 
-.navbar-stockticker {
+.navbar-login {
   grid-row: 1;
   grid-column: 2/3;
+  position: absolute;
+  left: 200px;
+  margin-left: 20px;
 }
 
-.navbar-tetris {
+.navbar-logout {
   grid-row: 1;
   grid-column: 3/4;
+  position: relative;
+  left: 500px;
+  margin-left: 20px;
 }
 
 /* style navbar */
@@ -88,10 +99,20 @@ below {
   text-align: center;
   padding-top: 18px;
 }
+
+#log {
+  font-size: 35px;
+  font-family: 'Porsche';
+  text-align: center;
+
+}
 /* style titles */
 #sub {
   font-size: 30px;
   font-family: 'raleway';
+  text-align: center;
+  padding-top: 25px;
+  margin-bottom: 15px;
 }
 
 .stockgraph {
@@ -102,7 +123,18 @@ below {
 
 .right-widget {
   left: -40%;
+  background-image: url("./img/carb.jpg");
 }
+
+.left-widget {
+  background-image: url("./img/carb.jpg");
+}
+
+.tetris {
+  position: relative;
+  top: 80px;
+}
+
 
 /*fonts */
 @font-face {
