--- a/index.css
+++ b/index.css
@@ -68,7 +68,8 @@ below {
   padding-top: 7px;
   padding-left: 12px;
   border-radius: 3px;
-  
+  z-index: 1;
+  box-shadow: 0 4px 12px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
 .navbar-portal {
@@ -87,7 +88,7 @@ below {
 .navbar-logout {
   grid-row: 1;
   grid-column: 3/4;
-  position: relative;
+  position: absolute;
   left: 500px;
   margin-left: 20px;
 }
@@ -135,6 +136,17 @@ below {
   top: 80px;
 }
 
+.login {
+  display:block;
+  position: absolute;
+  z-index: 1;
+
+}
+
+.out {
+  display: block;
+
+}
 
 /*fonts */
 @font-face {
